[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ['Dave Campion <me@davecampion.com>']

[profile.dev]
panic = "abort"
opt-level = 0
lto = false

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
bootloader = { path = "../bootloader" }
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
once_cell = { version = "1.20.2", default-features = false, features = ["critical-section"] }
riscv = { version = "0.12.1", default-features = false, features = [] }
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false
